<resources>
    <string name="app_name">JobCompare6300</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compare">Compare</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="cost_of_living">Cost of living</string>
    <string name="yearly_salary">Yearly Salary</string>
    <string name="yearly_bonus">Yearly Bonus</string>
    <string name="retirement_benefit">Retirement Benefits</string>
    <string name="relocation_stipend">Relocation Stipend</string>
    <string name="restricted_stock_unit_award">Restricted stock unit award</string>
    <string name="add_new_job">Add New Job</string>
    <string name="setting">Setting</string>
    <string name="edit_job">Edit Job</string>
</resources>