<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".FragmentCompare">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="Job Comparison Table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                android:fontFamily="@font/roboto_bold" android:textSize="20sp" android:textAlignment="center"
                android:layout_marginTop="16dp" android:layout_marginBottom="16dp"/>
        <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp" app:rowCount="6" app:columnCount="3" android:layout_weight="1">

            <TextView
                    android:text="@string/title"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblTitle"
                    app:layout_gravity="right"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:textAlignment="textEnd"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1Title"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2Title"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/company"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblCompany"
                    app:layout_gravity="right" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:textAlignment="textEnd" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1Company"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2Company"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/location"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblLocation"
                    app:layout_gravity="right" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:textAlignment="textEnd" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1Location"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2Location"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/cost_of_living"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblCostOfLiving"
                    app:layout_gravity="right" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:textAlignment="textEnd" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1CostOfLiving"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2CostOfLiving"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/yearly_salary"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblYearlySalary"
                    app:layout_gravity="right" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:textAlignment="textEnd" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1YearlySalary"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2YearlySalary"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/yearly_bonus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblYearlyBonus"
                    app:layout_gravity="right" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:textAlignment="textEnd" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1YearlyBonus"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2YearlyBonus"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/retirement_benefit"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblRetirementBenefit"
                    app:layout_gravity="right" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:textAlignment="textEnd" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1RetirementBenefit"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2RetirementBenefit"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/relocation_stipend"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblRelocationStipend"
                    app:layout_gravity="right" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp" android:layout_marginLeft="8dp"
                    android:textAlignment="textEnd" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1RelocationStipend"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2RelocationStipend"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="@string/restricted_stock_unit_award"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" android:id="@+id/lblRestrictedStock"
                    app:layout_gravity="right" android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_medium" android:textSize="14sp"
                    android:layout_marginStart="8dp" android:textAlignment="textEnd" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job1RestrictedStock"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/job2RestrictedStock"
                    app:layout_columnWeight="1" app:layout_gravity="fill" android:layout_marginTop="8dp"
                    android:textAlignment="center"/>

        </androidx.gridlayout.widget.GridLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
            <Button
                    android:text="Close"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/buttonCloseComparisonTable" android:layout_weight="1"
                    android:layout_marginLeft="8dp" android:layout_marginRight="8dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>